--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,6 @@ body{
     min-height: 100%;
 }
 
-
 .navbar {
     position: relative;
     padding: 0.5rem;
@@ -65,6 +64,10 @@ body{
     max-width: 64rem;
 }
 
+.container.narrow {
+    max-width: 56rem;
+}
+
 /* Medium and small screens (640px) */
 @media (min-width: 40rem) {
     html { font-size: 112%; } 
@@ -81,7 +84,6 @@ body{
     .column.third { width: 33.3%; }
     .column.fourth { width: 25%; }
     .column.flow-opposite { float: right; }
-    
 }
 
 /* Large screens (1024px) */
